@@ -80,6 +80,16 @@ begin_import
 import|import
 name|java
 operator|.
+name|security
+operator|.
+name|NoSuchAlgorithmException
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
 name|util
 operator|.
 name|ArrayList
@@ -195,6 +205,16 @@ operator|.
 name|atomic
 operator|.
 name|AtomicInteger
+import|;
+end_import
+
+begin_import
+import|import
+name|javax
+operator|.
+name|crypto
+operator|.
+name|KeyGenerator
 import|;
 end_import
 
@@ -364,7 +384,35 @@ name|hadoop
 operator|.
 name|mapreduce
 operator|.
+name|CryptoUtils
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|mapreduce
+operator|.
 name|MRConfig
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|mapreduce
+operator|.
+name|MRJobConfig
 import|;
 end_import
 
@@ -467,6 +515,22 @@ operator|.
 name|protocol
 operator|.
 name|ClientProtocol
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|mapreduce
+operator|.
+name|security
+operator|.
+name|TokenCache
 import|;
 end_import
 
@@ -719,6 +783,15 @@ name|String
 name|LOCAL_MAX_REDUCES
 init|=
 literal|"mapreduce.local.reduce.tasks.maximum"
+decl_stmt|;
+DECL|field|INTERMEDIATE_DATA_ENCRYPTION_ALGO
+specifier|public
+specifier|static
+specifier|final
+name|String
+name|INTERMEDIATE_DATA_ENCRYPTION_ALGO
+init|=
+literal|"HmacSHA1"
 decl_stmt|;
 DECL|field|fs
 specifier|private
@@ -1291,6 +1364,105 @@ argument_list|,
 name|this
 argument_list|)
 expr_stmt|;
+if|if
+condition|(
+name|CryptoUtils
+operator|.
+name|isEncryptedSpillEnabled
+argument_list|(
+name|job
+argument_list|)
+condition|)
+block|{
+try|try
+block|{
+name|int
+name|keyLen
+init|=
+name|conf
+operator|.
+name|getInt
+argument_list|(
+name|MRJobConfig
+operator|.
+name|MR_ENCRYPTED_INTERMEDIATE_DATA_KEY_SIZE_BITS
+argument_list|,
+name|MRJobConfig
+operator|.
+name|DEFAULT_MR_ENCRYPTED_INTERMEDIATE_DATA_KEY_SIZE_BITS
+argument_list|)
+decl_stmt|;
+name|KeyGenerator
+name|keyGen
+init|=
+name|KeyGenerator
+operator|.
+name|getInstance
+argument_list|(
+name|INTERMEDIATE_DATA_ENCRYPTION_ALGO
+argument_list|)
+decl_stmt|;
+name|keyGen
+operator|.
+name|init
+argument_list|(
+name|keyLen
+argument_list|)
+expr_stmt|;
+name|Credentials
+name|creds
+init|=
+name|UserGroupInformation
+operator|.
+name|getCurrentUser
+argument_list|()
+operator|.
+name|getCredentials
+argument_list|()
+decl_stmt|;
+name|TokenCache
+operator|.
+name|setEncryptedSpillKey
+argument_list|(
+name|keyGen
+operator|.
+name|generateKey
+argument_list|()
+operator|.
+name|getEncoded
+argument_list|()
+argument_list|,
+name|creds
+argument_list|)
+expr_stmt|;
+name|UserGroupInformation
+operator|.
+name|getCurrentUser
+argument_list|()
+operator|.
+name|addCredentials
+argument_list|(
+name|creds
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|NoSuchAlgorithmException
+name|e
+parameter_list|)
+block|{
+throw|throw
+operator|new
+name|IOException
+argument_list|(
+literal|"Error generating encrypted spill key"
+argument_list|,
+name|e
+argument_list|)
+throw|;
+block|}
+block|}
 name|this
 operator|.
 name|start
