@@ -156,6 +156,20 @@ name|hadoop
 operator|.
 name|mapreduce
 operator|.
+name|MRJobConfig
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|mapreduce
+operator|.
 name|SleepJob
 import|;
 end_import
@@ -334,6 +348,138 @@ operator|.
 name|toString
 argument_list|()
 block|,
+literal|"-m"
+block|,
+literal|"1"
+block|,
+literal|"-r"
+block|,
+literal|"1"
+block|,
+literal|"-mt"
+block|,
+literal|"1"
+block|,
+literal|"-rt"
+block|,
+literal|"1"
+block|}
+decl_stmt|;
+name|int
+name|res
+init|=
+operator|-
+literal|1
+decl_stmt|;
+try|try
+block|{
+name|res
+operator|=
+name|ToolRunner
+operator|.
+name|run
+argument_list|(
+name|conf
+argument_list|,
+operator|new
+name|SleepJob
+argument_list|()
+argument_list|,
+name|args
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|Exception
+name|e
+parameter_list|)
+block|{
+name|System
+operator|.
+name|out
+operator|.
+name|println
+argument_list|(
+literal|"Job failed with "
+operator|+
+name|e
+operator|.
+name|getLocalizedMessage
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|e
+operator|.
+name|printStackTrace
+argument_list|(
+name|System
+operator|.
+name|out
+argument_list|)
+expr_stmt|;
+name|fail
+argument_list|(
+literal|"Job failed"
+argument_list|)
+expr_stmt|;
+block|}
+name|assertEquals
+argument_list|(
+literal|"dist job res is not 0:"
+argument_list|,
+literal|0
+argument_list|,
+name|res
+argument_list|)
+expr_stmt|;
+block|}
+comment|/**    * test the local job submission with    * intermediate data encryption enabled.    * @throws IOException    */
+annotation|@
+name|Test
+DECL|method|testLocalJobEncryptedIntermediateData ()
+specifier|public
+name|void
+name|testLocalJobEncryptedIntermediateData
+parameter_list|()
+throws|throws
+name|IOException
+block|{
+name|Configuration
+name|conf
+init|=
+operator|new
+name|Configuration
+argument_list|()
+decl_stmt|;
+name|conf
+operator|.
+name|set
+argument_list|(
+name|MRConfig
+operator|.
+name|FRAMEWORK_NAME
+argument_list|,
+literal|"local"
+argument_list|)
+expr_stmt|;
+name|conf
+operator|.
+name|setBoolean
+argument_list|(
+name|MRJobConfig
+operator|.
+name|MR_ENCRYPTED_INTERMEDIATE_DATA
+argument_list|,
+literal|true
+argument_list|)
+expr_stmt|;
+specifier|final
+name|String
+index|[]
+name|args
+init|=
+block|{
 literal|"-m"
 block|,
 literal|"1"
